Updated the jupyter notebook
Bug fixes for remove atoms, when a new system couldn't be made before "reset" system wasn't clicked

--- a/Web_app_voila.ipynb
+++ b/Web_app_voila.ipynb
@@ -476,16 +476,21 @@
     "def plot_conductance(emin=-3, emax=3, t=2.75): #define what to calculate for the structures\n",
     "    trans=[] #empty list to store values\n",
     "    trans2=[]\n",
+    "    energies2=[]\n",
     "    energies=np.linspace(emin*t, emax*t, num=300) #specify energy grid\n",
     "    perfsys=perfect_system(t) #obtain the geometry of the pristine lead system\n",
-    "    for energy in energies:\n",
+    "    for i,energy in enumerate(energies):\n",
     "        smatrix = kwant.smatrix(fsys, energy,check_hermiticity=False) #calculates the S matrix of the system in interest\n",
     "        trans.append(smatrix.transmission(1,0)) #calcualtes the transmission coefficient\n",
-    "        smatrix2 = kwant.smatrix(perfsys, energy,check_hermiticity=False) #same but for ideal lead system\n",
-    "        trans2.append(smatrix2.transmission(1,0))\n",
+    "        if i%2==0:\n",
+    "            smatrix2 = kwant.smatrix(perfsys, energy,check_hermiticity=False) #same but for ideal lead system\n",
+    "            trans2.append(smatrix2.transmission(1,0))\n",
+    "            energies2.append(energy)\n",
     "    for j in range(len(energies)):\n",
-    "        energies[j]=energies[j]/t #convert energies back in terms of t        \n",
-    "    return energies, trans, trans2\n"
+    "        energies[j]=energies[j]/t #convert energies back in terms of t\n",
+    "    for k in range(len(energies2)):\n",
+    "        energies2[k]=energies2[k]/t #convert energies back in terms of t        \n",
+    "    return energies, energies2, trans, trans2\n"
    ]
   },
   {
@@ -501,9 +506,10 @@
     "    perfsys=perfect_system(t) #make the perfect leads to compare\n",
     "    energies=np.linspace(emin*t, emax*t, num=300) #eneryg range\n",
     "    \n",
-    "    for J in energies:\n",
-    "        dos.append(np.sum(kwant.ldos(fsys,J))) #sum over all atom ldos \n",
-    "        dos2.append(np.sum(kwant.ldos(perfsys,J)))\n",
+    "    for i,J in enumerate(energies):\n",
+    "        dos.append(np.sum(kwant.ldos(fsys,J))) #sum over all atom ldos\n",
+    "        if i%2==0:\n",
+    "            dos2.append(np.sum(kwant.ldos(perfsys,J)))\n",
     "        \n",
     "    for j in range(len(energies)):\n",
     "        energies[j]=energies[j]/t         #convert energies in terms of t\n",
@@ -533,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,24 +666,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Plotting function to get both Conductance and DOS\n",
     "def cond_and_dos(Emin,Emax):\n",
-    "    energies, trans, trans2=plot_conductance(Emin,Emax)\n",
+    "    energies, energies2, trans, trans2=plot_conductance(Emin,Emax)\n",
     "    dos, dos2 = get_DOS(Emin,Emax)      \n",
     "    fig, (ax, ax2) = plt.subplots(1, 2, figsize=(20,10)) \n",
     "    ax.plot(energies, trans, label=\"Junction\")\n",
-    "    ax.plot(energies, trans2, label=\"GNR\")\n",
+    "    ax.plot(energies2, trans2, label=\"GNR\")\n",
     "    ax.legend()\n",
     "    ax.set_xlabel(\"Energy (t)\")\n",
     "    ax.set_ylabel(\"Conductance (e\\N{SUPERSCRIPT TWO}/h)\")\n",
     "    ax.set_xticks(np.arange(Emin, Emax+(Emax-Emin)/10, round((Emax-Emin)/10,2)))\n",
     "    ax.xaxis.set_tick_params(rotation=90)\n",
     "    ax2.plot(energies, dos,label='Junction')\n",
-    "    ax2.plot(energies, dos2,label='GNR')\n",
+    "    ax2.plot(energies2, dos2,label='GNR')\n",
     "    ax2.set_xlabel(\"Energy (t)\")\n",
     "    ax2.set_ylabel(\"DOS\")\n",
     "    ax2.set_xticks(np.arange(Emin, Emax+(Emax-Emin)/10, round((Emax-Emin)/10,2)))\n",
@@ -688,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,6 +758,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "oldreset=0\n",
+    "ireset=0 #dummy variables to workaround that one couldnt change the system parameters while remove atoms was submitted forcing to reset system first\n",
+    "ldos_current=0  #dummy variable to workaround for loading sequence of cells, some info loaded in the next cell caused a crash\n",
+    "style = {'description_width': 'initial'} #To display the whole discripriotn of the button, otherwise the string is cut\n",
+    "\n",
     "#Widget to build the structure\n",
     "def make_and_display(Angle,Width,Distance,Shift,Chirality,RemAtoms):\n",
     "    if Width%2!=0:                               #some restrictions on what parameters you can change with the selected angle/width\n",
@@ -769,15 +780,19 @@
     "    if Angle==180:\n",
     "        Selection.children[3].disabled=False\n",
     "    #restrictions end    \n",
-    "    global sys, lead0, lead1, a, b, v1, v2, p1, p2, A, D, W, S, F\n",
+    "    global sys, lead0, lead1, a, b, v1, v2, p1, p2, A, D, W, S, F, oldreset\n",
     "    #This part checks if there are atoms to remove and hence the system has been already built or if len(RemAtoms)=0\n",
     "    #then new system will be built. Essentially this is \"cheating\" by always passing a list of atoms to remove, but\n",
     "    #when we build a new system the list is empty.\n",
-    "    if len(RemAtoms)>0:                                \n",
-    "        atoms = map(int, RemAtoms.split(','))\n",
-    "        sys=del_atoms(atoms)\n",
+    "    if len(RemAtoms)>0:         #Checks if there is a string of atoms entered in the remove atoms cell\n",
+    "        if ireset==oldreset:   #Dummy variable to check if the string was submitted now or is it still active from previous submission\n",
+    "            RemAtoms=[]     #Deletes the old string and proceeds to build a new system \n",
+    "        if ireset!=oldreset:   #If the string to remove atoms is newly submitted, then removes atoms \n",
+    "            atoms = map(int, RemAtoms.split(','))\n",
+    "            sys=del_atoms(atoms)\n",
+    "            oldreset+=1\n",
     "    if len(RemAtoms)==0:\n",
-    "        sys, lead0, lead1, a, b, v1, v2, p1, p2, A, D, W, S, F = make_system(A=Angle,W=Width,D=Distance,S=Shift,F=Chirality)        \n",
+    "        sys, lead0, lead1, a, b, v1, v2, p1, p2, A, D, W, S, F = make_system(A=Angle,W=Width,D=Distance,S=Shift,F=Chirality) \n",
     "    #returns dimensions of the system for further plotting (ldos and current) and plots the system+band structure\n",
     "    global xaxis, yaxis \n",
     "    xaxis, yaxis = plot_numbers()\n",
@@ -785,10 +800,6 @@
     "        Single_en_at.children[0].value+=0.1 \n",
     "        Single_en_at.children[0].value-=0.1 \n",
     "    #Workaround to update ldos and current plots, ldos_current is dummy variable active when the function is called later\n",
-    "    \n",
-    "ldos_current=0    \n",
-    "style = {'description_width': 'initial'} #To display the whole discripriotn of the button, otherwise the string is cut\n",
-    "\n",
     "\n",
     "#The main widget with selections for the system. Every time a value is changed, the system will be rebuilt. The problem\n",
     "#is with removing atoms or reseting system. Two aditional functions (reset and remove) and buttons are used to \n",
@@ -796,10 +807,10 @@
     "#reseting or removing some atoms as the widget executes the function anytime a parameter is changed. \n",
     "#In the initial widget hence this RemAtoms section must be hidden and is set to be empty.\n",
     "Selection = interactive(make_and_display, Angle=[('180°',180),('120°',120),('60°',60)],\n",
-    "                Width=widgets.IntSlider(min=3, max=16, step=1, value=5),\n",
-    "               Distance=widgets.IntSlider(min=1,max=3,step=1, value=1),\n",
-    "               Shift=widgets.IntSlider(min=0,max=5,step=1, value=0),\n",
-    "               Chirality=widgets.Dropdown(options=[('up',0),('down',1)]),RemAtoms=widgets.Text(value='',description='Previously removed atoms',style=style,disabled=True))\n",
+    "                        Width=widgets.IntSlider(min=3, max=16, step=1, value=5),\n",
+    "                        Distance=widgets.IntSlider(min=1,max=3,step=1, value=1),\n",
+    "                        Shift=widgets.IntSlider(min=0,max=5,step=1, value=0),\n",
+    "                        Chirality=widgets.Dropdown(options=[('up',0),('down',1)]),RemAtoms=widgets.Text(value='',description='Previously removed atoms',style=style))\n",
     "\n",
     "Selection.children[5].layout.visibility=\"hidden\" #Hide RemAtoms seciton\n",
     "\n",
@@ -814,9 +825,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fb23441c51f949aaa5a03dc22a16c529",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Angle', options=(('180°', 180), ('120°', 120), ('60°', 60)), value…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "75c3575516304830b8675fe10f1af89d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value='0,2,5', description='Enter atoms to remove:', style=DescriptionStyle(descrip…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e13f5e008a44bd1be8e42923b2380d2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Reset system', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(Selection) #displays the initial widget\n",
     "\n",
@@ -827,8 +883,19 @@
     "#the display(widget) function. Just makes the code messier, but works...\n",
     "remov_atoms=interact.options(manual=True, manual_name=\"Remove atoms\")\n",
     "@remov_atoms(Remove=widgets.Text(value='0,2,5',description='Enter atoms to remove:',style=style))\n",
-    "def calculate_cond(Remove):\n",
-    "    Selection.children[5].value = Remove   \n",
+    "def calculate_cond(Remove):    \n",
+    "    global ireset  #ireset is used to control when a new value for remove atoms is entered\n",
+    "    if Remove == Selection.children[5].value:  #If the submission is the same string of atoms, the function doesn't update\n",
+    "        if len(Remove)>1:\n",
+    "            ireset+=1\n",
+    "            Remove=str(Remove[len(Remove)-1:])+\",\"+str(Remove[:len(Remove)-2])\n",
+    "            Selection.children[5].value = Remove\n",
+    "        if len(Remove)==1: #If only one atom is entered and is the same as previous, Don't have a solution yet....\n",
+    "            print (\"Sorry for my weak programming skills: Please reset the system and remove the last two atoms together in one submission\")\n",
+    "    else:\n",
+    "        ireset+=1\n",
+    "        Selection.children[5].value = Remove\n",
+    "    \n",
     "    \n",
     "#Displays the reset_button        \n",
     "display(reset_button)"
@@ -848,21 +915,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'interact' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-89f8bcae4475>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Again a manual interact widget just like the Remove atoms. Finalizes the system and then plots conductance and dos.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0minteract_calc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minteract\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmanual\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmanual_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Calculate\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m@\u001b[0m\u001b[0minteract_calc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mEmin\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mwidgets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mFloatSlider\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdescription\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Min Energy (t)\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mstyle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstyle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mEmax\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mwidgets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mFloatSlider\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mEmin\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdescription\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Max Energy (t)\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mstyle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstyle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcalculate_cond\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mEmin\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mEmax\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mglobal\u001b[0m \u001b[0mfsys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'interact' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Again a manual interact widget just like the Remove atoms. Finalizes the system and then plots conductance and dos. \n",
     "interact_calc=interact.options(manual=True, manual_name=\"Calculate\")\n",
@@ -875,24 +930,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e524895d4c984db39759ceb400eca498",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=-3.0, description='Min Energy (t)', max=3.0, min=-3.0, style=SliderSty…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def single(Energy,Mode):\n",
     "    global fsys\n",
@@ -925,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
