--- a/Web_app_voila.ipynb
+++ b/Web_app_voila.ipynb
@@ -684,6 +684,7 @@
     "    ax.xaxis.set_tick_params(rotation=90)\n",
     "    ax2.plot(energies, dos,label='Junction')\n",
     "    ax2.plot(energies2, dos2,label='GNR')\n",
+    "    ax2.legend()\n",
     "    ax2.set_xlabel(\"Energy (t)\")\n",
     "    ax2.set_ylabel(\"DOS\")\n",
     "    ax2.set_xticks(np.arange(Emin, Emax+(Emax-Emin)/10, round((Emax-Emin)/10,2)))\n",
