--- a/Web_app_voila.ipynb
+++ b/Web_app_voila.ipynb
@@ -906,7 +906,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Transport and electronic properties are calculated by designing the desirded system first and then clicking \"Calculate\" button. It is possible to adjust the energy range, where conductance and density of states (DOS) are calculated. To calculate the properties in different energy range, select the minimum and maximum energy values and click \"Calculate\" again. Calculation may take some time, the \"Calculate\" button will turn grey when calculation is in progress.#Conductance and DOS plots\n",
+    "Transport and electronic properties are calculated by designing the desirded system first and then clicking \"Calculate\" button. It is possible to adjust the energy range, where conductance and density of states (DOS) are calculated. To calculate the properties in different energy range, select the minimum and maximum energy values and click \"Calculate\" again. Calculation may take some time, the \"Calculate\" button will turn grey when calculation is in progress.\n",
     "\n",
     "    \n",
     "\n",
