Updated web app
Font size, bug with remove atoms when the same atom was entered, added title for band structure, energy selection changed to float box, wavefunctions no longer distorted, transmission at particular energy displayed, mode starts from 1 instead of 0.

--- a/Web_app_voila.ipynb
+++ b/Web_app_voila.ipynb
@@ -16,18 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda\\lib\\site-packages\\kwant\\solvers\\default.py:18: RuntimeWarning: MUMPS is not available, SciPy built-in solver will be used as a fallback. Performance can be very poor in this case.\n",
-      "  \"Performance can be very poor in this case.\", RuntimeWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import kwant\n",
     "from math import *\n",
@@ -43,6 +34,18 @@
     "from matplotlib import gridspec\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets\n",
+    "\n",
+    "\n",
+    "MEDIUM_SIZE = 16\n",
+    "BIGGER_SIZE = 16\n",
+    "\n",
+    "\n",
+    "plt.rc('axes', titlesize=MEDIUM_SIZE)     # fontsize of the axes title\n",
+    "plt.rc('axes', labelsize=MEDIUM_SIZE)    # fontsize of the x and y labels\n",
+    "plt.rc('xtick', labelsize=MEDIUM_SIZE)    # fontsize of the tick labels\n",
+    "plt.rc('ytick', labelsize=MEDIUM_SIZE)    # fontsize of the tick labels\n",
+    "plt.rc('legend', fontsize=MEDIUM_SIZE)    # legend fontsize\n",
+    "plt.rc('figure', titlesize=MEDIUM_SIZE)  # fontsize of the figure title\n",
     "\n",
     "\n",
     "\n",
@@ -383,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,6 +442,7 @@
     "        ax2.plot(momenta, energies, c='black')\n",
     "        ax2.set_xticks(np.arange(-1,1.1,1))\n",
     "        ax2.set_xticklabels(['X', 'Γ', 'X'])\n",
+    "        ax2.set_title('Band structure of the leads')\n",
     "        ax2.set_xlabel(\"Wave vector\")\n",
     "        ax2.set_ylabel(\"Energy (t)\")\n",
     "        #returns the dimensions of the structure\n",
@@ -447,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +481,7 @@
     "    trans=[] #empty list to store values\n",
     "    trans2=[]\n",
     "    energies2=[]\n",
-    "    energies=np.linspace(emin*t, emax*t, num=300) #specify energy grid\n",
+    "    energies=np.linspace((emin+0.00001)*t, (emax+0.00001)*t, num=300) #specify energy grid\n",
     "    perfsys=perfect_system(t) #obtain the geometry of the pristine lead system\n",
     "    for i,energy in enumerate(energies):\n",
     "        smatrix = kwant.smatrix(fsys, energy,check_hermiticity=False) #calculates the S matrix of the system in interest\n",
@@ -495,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,9 +596,9 @@
     "    wf = kwant.solvers.default.wave_function(leads,energy=t*(en+0.00001))\n",
     "    if len(wf(0))!=0:  #This part takes care to set maximum number of modes at particular energy\n",
     "        if ldos_current==1: #checks if the last cell has been initialized (dummy variable)\n",
-    "            Single_en_at.children[1].max=len(wf(0))-1 #sets maximum by checking how many wfn are at the energy\n",
-    "            if Single_en_at.children[1].value>len(wf(0))-1: #check if current selection isn't higher than the max\n",
-    "                Single_en_at.children[1].value=len(wf(0))-1\n",
+    "            Single_en_at.children[1].max=len(wf(0)) #sets maximum by checking how many wfn are at the energy\n",
+    "            if Single_en_at.children[1].value>len(wf(0)): #check if current selection isn't higher than the max\n",
+    "                Single_en_at.children[1].value=len(wf(0))\n",
     "        psi_l= wf(0)[mode] #selecting the wfn incoming from left (0) and selecting the mode\n",
     "        amplitude=[]\n",
     "        pha=[]\n",
@@ -609,7 +613,8 @@
     "                if first==0:\n",
     "                    first=1\n",
     "                    pha[count]=1\n",
-    "        fig = plt.figure(figsize=(10,3)) # create the canvas for plotting #add something for length for different widths\n",
+    "        global W\n",
+    "        fig = plt.figure(figsize=(10.9,W/2)) # create the canvas for plotting #add something for length for different widths\n",
     "        gs = gridspec.GridSpec(1, 2, width_ratios=[10, 1]) \n",
     "        ax1 = plt.subplot(gs[0]) \n",
     "        ax2 = plt.subplot(gs[1],projection='polar')  \n",
@@ -627,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,12 +700,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "name 'fsys' is used prior to global declaration (<ipython-input-3-dc67b3ca8f44>, line 40)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-dc67b3ca8f44>\"\u001b[1;36m, line \u001b[1;32m40\u001b[0m\n\u001b[1;33m    ax2.text(xaxis[0]+1.5,yaxis[1]-2,s=str(\"{:.2E}\".format(T)))\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m name 'fsys' is used prior to global declaration\n"
+     ]
+    }
+   ],
    "source": [
     "#Plotting function to get both ldos and current\n",
-    "def ldos_and_current(Energy):\n",
+    "def ldos_and_current(Energy,t=2.75):\n",
     "    ldos, max_ldos=get_ldos(en=Energy)\n",
     "    if max_ldos==0:\n",
     "        print (\"Please select another energy value as there are no bands at this energy\")\n",
@@ -735,6 +749,10 @@
     "        ax2.set_xticks([])\n",
     "        ax2.set_ylim(yaxis)\n",
     "        ax2.set_xlim(xaxis)\n",
+    "        smatrix = kwant.smatrix(fsys, Energy*t) #calculates the S matrix of the system in interest\n",
+    "        T=(smatrix.transmission(1,0)) #calcualtes the transmission coefficient\n",
+    "        ax2.text(xaxis[0]+1.5,yaxis[1]-2,s=str(\"Transmission:\"+\"{:.2E}\".format(T)))\n",
+    "        \n",
     "\n",
     "        # Set the colormap and norm to correspond to the data for which\n",
     "        # the colorbar will be used.\n",
@@ -755,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,6 +808,7 @@
     "            RemAtoms=[]     #Deletes the old string and proceeds to build a new system \n",
     "        if ireset!=oldreset:   #If the string to remove atoms is newly submitted, then removes atoms \n",
     "            atoms = map(int, RemAtoms.split(','))\n",
+    "            atoms=set(atoms)\n",
     "            sys=del_atoms(atoms)\n",
     "            oldreset+=1\n",
     "    if len(RemAtoms)==0:\n",
@@ -826,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {
     "scrolled": false
    },
@@ -834,7 +853,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb23441c51f949aaa5a03dc22a16c529",
+       "model_id": "3097f59994a844eb8c90e4fae26a98df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -848,12 +867,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75c3575516304830b8675fe10f1af89d",
+       "model_id": "dd44eceb9f764de69dbb6b8a9024c226",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Text(value='0,2,5', description='Enter atoms to remove:', style=DescriptionStyle(descrip…"
+       "interactive(children=(Text(value='', description='Enter atoms to remove:', placeholder='e.g. 1,4,3', style=Des…"
       ]
      },
      "metadata": {},
@@ -862,7 +881,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e13f5e008a44bd1be8e42923b2380d2",
+       "model_id": "f0f1d74527e44f138d3895becb84e2e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -882,8 +901,9 @@
     "#function would be executed and probably fail when you type a comma between atoms. Problem here was the naming of the \n",
     "#manual interact button to \"Remove atoms\". Solved by copying a piece of code , however it displays the widget without\n",
     "#the display(widget) function. Just makes the code messier, but works...\n",
-    "remov_atoms=interact.options(manual=True, manual_name=\"Remove atoms\")\n",
-    "@remov_atoms(Remove=widgets.Text(value='0,2,5',description='Enter atoms to remove:',style=style))\n",
+    "remov_atoms=interact.options(manual=True, manual_name=\"Remove atoms\") \n",
+    "rem_wid=widgets.Text(description='Enter atoms to remove:',placeholder='e.g. 1,4,3',style=style)\n",
+    "@remov_atoms(Remove=rem_wid)\n",
     "def calculate_cond(Remove):    \n",
     "    global ireset  #ireset is used to control when a new value for remove atoms is entered\n",
     "    if Remove == Selection.children[5].value:  #If the submission is the same string of atoms, the function doesn't update\n",
@@ -896,8 +916,8 @@
     "    else:\n",
     "        ireset+=1\n",
     "        Selection.children[5].value = Remove\n",
-    "    \n",
-    "    \n",
+    "    rem_wid.value=''  #clear the field after entering which atoms to delete\n",
+    "\n",
     "#Displays the reset_button        \n",
     "display(reset_button)"
    ]
@@ -906,7 +926,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Transport and electronic properties are calculated by designing the desirded system first and then clicking \"Calculate\" button. It is possible to adjust the energy range, where conductance and density of states (DOS) are calculated. To calculate the properties in different energy range, select the minimum and maximum energy values and click \"Calculate\" again. Calculation may take some time, the \"Calculate\" button will turn grey when calculation is in progress.\n",
+    "Transport and electronic properties are calculated by designing the desirded system first and then clicking \"Calculate\" button. It is possible to adjust the energy range, where conductance and density of states (DOS) are calculated. To calculate the properties in different energy range, select the minimum and maximum energy values and click \"Calculate\" again. Calculation may take some time, the \"Calculate\" button will turn grey when calculation is in progress.#Conductance and DOS plots\n",
     "\n",
     "    \n",
     "\n",
@@ -939,9 +959,9 @@
     "    global fsys\n",
     "    fsys=sys.finalized()\n",
     "    ldos_and_current(Energy)\n",
-    "    lead_wfn(en=Energy,mode=Mode)    \n",
+    "    lead_wfn(en=Energy,mode=Mode-1)    \n",
     "    \n",
-    "Single_en_at = interactive(single,Energy=widgets.FloatSlider(min=-3, max=3, step=0.01, value=0.5, description=\"Energy (t)\"),Mode=widgets.IntSlider(min=0, max=10, value=0))\n",
+    "Single_en_at = interactive(single,Energy=widgets.FloatText(value=0.5,description=\"Energy (t)\"),Mode=widgets.IntSlider(min=1, max=10, value=0))\n",
     "ldos_current=1\n",
     "    "
    ]
