--- a/Web_app_voila.ipynb
+++ b/Web_app_voila.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda\\lib\\site-packages\\kwant\\solvers\\default.py:18: RuntimeWarning: MUMPS is not available, SciPy built-in solver will be used as a fallback. Performance can be very poor in this case.\n",
+      "  \"Performance can be very poor in this case.\", RuntimeWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import kwant\n",
     "from math import *\n",
@@ -586,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,13 +623,13 @@
     "                    first=1\n",
     "                    pha[count]=1\n",
     "        global W\n",
-    "        fig = plt.figure(figsize=(10.9,W/2)) # create the canvas for plotting #add something for length for different widths\n",
+    "        fig = plt.figure(figsize=(10.9,W/2+1)) # create the canvas for plotting #add something for length for different widths\n",
     "        gs = gridspec.GridSpec(1, 2, width_ratios=[10, 1]) \n",
     "        ax1 = plt.subplot(gs[0]) \n",
     "        ax2 = plt.subplot(gs[1],projection='polar')  \n",
     "        ax1.set_xticks([])\n",
     "        ax1.set_yticks([])\n",
-    "#         ax1.set_aspect('equal','box')\n",
+    "        ax1.set_aspect('equal','box')\n",
     "        kwant.plotter.plot(leads,site_size=amplitude/max(amplitude)/2.5,site_color=pha,lead_color='black',cmap=cmocean.cm.phase,fig_size=(10,5),colorbar=False,ax=ax1)\n",
     "        azimuths = np.arange(0, 361, 1)\n",
     "        zeniths = np.arange(70, 100, 1)\n",
@@ -700,18 +709,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "name 'fsys' is used prior to global declaration (<ipython-input-3-dc67b3ca8f44>, line 40)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-dc67b3ca8f44>\"\u001b[1;36m, line \u001b[1;32m40\u001b[0m\n\u001b[1;33m    ax2.text(xaxis[0]+1.5,yaxis[1]-2,s=str(\"{:.2E}\".format(T)))\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m name 'fsys' is used prior to global declaration\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Plotting function to get both ldos and current\n",
     "def ldos_and_current(Energy,t=2.75):\n",
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,11 +826,12 @@
     "#change the hidden RemAtoms selection. Therefore RemAtoms here is needed so that we can \"rebuild\" our system either by\n",
     "#reseting or removing some atoms as the widget executes the function anytime a parameter is changed. \n",
     "#In the initial widget hence this RemAtoms section must be hidden and is set to be empty.\n",
-    "Selection = interactive(make_and_display, Angle=[('180°',180),('120°',120),('60°',60)],\n",
-    "                        Width=widgets.IntSlider(min=3, max=16, step=1, value=5),\n",
-    "                        Distance=widgets.IntSlider(min=1,max=3,step=1, value=1),\n",
-    "                        Shift=widgets.IntSlider(min=0,max=5,step=1, value=0),\n",
-    "                        Chirality=widgets.Dropdown(options=[('up',0),('down',1)]),RemAtoms=widgets.Text(value='',description='Previously removed atoms',style=style))\n",
+    "Selection = interactive(make_and_display, Angle=widgets.Dropdown(description_tooltip=\"Select the angle between the two leads\",options=[('180°',180),('120°',120),('60°',60)]),\n",
+    "                        Width=widgets.IntSlider(description_tooltip=\"Select the width of the leads in terms of carbon atoms\",min=3, max=16, step=1, value=5),\n",
+    "                        Distance=widgets.IntSlider(description_tooltip=\"Select the distance between the leads\",min=1,max=3,step=1, value=1),\n",
+    "                        Shift=widgets.IntSlider(description_tooltip=\"Shift one lead upwards with respect to another\",min=0,max=5,step=1, value=0),\n",
+    "                        Chirality=widgets.Dropdown(description_tooltip=\"For even-numbered widths of the leads, select chirality\",options=[('up',0),('down',1)]),\n",
+    "                        RemAtoms=widgets.Text(value='',description='Previously removed atoms',style=style))\n",
     "\n",
     "Selection.children[5].layout.visibility=\"hidden\" #Hide RemAtoms seciton\n",
     "\n",
@@ -839,13 +840,13 @@
     "    \"\"\"Reset the interactive plots to inital values.\"\"\"\n",
     "    Selection.children[5].value = ''\n",
     "\n",
-    "reset_button = widgets.Button(description = \"Reset system\")\n",
+    "reset_button = widgets.Button(description = \"Reset system\",tooltip='Back to original system with no atoms removed')\n",
     "reset_button.on_click(reset_values)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -853,12 +854,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3097f59994a844eb8c90e4fae26a98df",
+       "model_id": "2350a96dec3b4285a94efcf4df4f976e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='Angle', options=(('180°', 180), ('120°', 120), ('60°', 60)), value…"
+       "interactive(children=(Dropdown(description='Angle', description_tooltip='Select the angle between the two lead…"
       ]
      },
      "metadata": {},
@@ -867,12 +868,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd44eceb9f764de69dbb6b8a9024c226",
+       "model_id": "996398a7f10b4dd298e1c764f5e0af46",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Text(value='', description='Enter atoms to remove:', placeholder='e.g. 1,4,3', style=Des…"
+       "interactive(children=(Text(value='', description='Enter atoms to remove:', description_tooltip='Enter the numb…"
       ]
      },
      "metadata": {},
@@ -881,12 +882,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0f1d74527e44f138d3895becb84e2e4",
+       "model_id": "6dab1dedac4d4800bff63053a80d62d0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Button(description='Reset system', style=ButtonStyle())"
+       "Button(description='Reset system', style=ButtonStyle(), tooltip='Back to original system with no atoms removed…"
       ]
      },
      "metadata": {},
@@ -902,7 +903,7 @@
     "#manual interact button to \"Remove atoms\". Solved by copying a piece of code , however it displays the widget without\n",
     "#the display(widget) function. Just makes the code messier, but works...\n",
     "remov_atoms=interact.options(manual=True, manual_name=\"Remove atoms\") \n",
-    "rem_wid=widgets.Text(description='Enter atoms to remove:',placeholder='e.g. 1,4,3',style=style)\n",
+    "rem_wid=widgets.Text(description_tooltip=\"Enter the numbers of the atoms you want to remove separated by a comma (,)\",description='Enter atoms to remove:',placeholder='e.g. 1,4,3',style=style)\n",
     "@remov_atoms(Remove=rem_wid)\n",
     "def calculate_cond(Remove):    \n",
     "    global ireset  #ireset is used to control when a new value for remove atoms is entered\n",
@@ -926,7 +927,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Transport and electronic properties are calculated by designing the desirded system first and then clicking \"Calculate\" button. It is possible to adjust the energy range, where conductance and density of states (DOS) are calculated. To calculate the properties in different energy range, select the minimum and maximum energy values and click \"Calculate\" again. Calculation may take some time, the \"Calculate\" button will turn grey when calculation is in progress.#Conductance and DOS plots\n",
+    "Transport and electronic properties are calculated by designing the desirded system first and then clicking \"Calculate\" button. It is possible to adjust the energy range, where conductance and density of states (DOS) are calculated. To calculate the properties in different energy range, select the minimum and maximum energy values and click \"Calculate\" again. Calculation may take some time, the \"Calculate\" button will turn grey when calculation is in progress.\n",
     "\n",
     "    \n",
     "\n",
@@ -942,7 +943,7 @@
    "source": [
     "#Again a manual interact widget just like the Remove atoms. Finalizes the system and then plots conductance and dos. \n",
     "interact_calc=interact.options(manual=True, manual_name=\"Calculate\")\n",
-    "@interact_calc(Emin=widgets.FloatSlider(min=-3, max=3, step=0.1, value=-3, description=\"Min Energy (t)\",style=style),Emax=widgets.FloatSlider(min=-3, max=3, step=0.1, value=3,description=\"Max Energy (t)\",style=style))\n",
+    "@interact_calc(Emin=widgets.FloatSlider(description_tooltip=\"Select the lowest energy of the desired range\",min=-3, max=3, step=0.1, value=-3, description=\"Min Energy (t)\",style=style),Emax=widgets.FloatSlider(min=-3, max=3, step=0.1, value=3,description_tooltip=\"Select the highest energy of the desired range\",description=\"Max Energy (t)\",style=style))\n",
     "def calculate_cond(Emin,Emax):\n",
     "    global fsys\n",
     "    fsys=sys.finalized()\n",
@@ -955,13 +956,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Widget for displaying current, ldos and wavefunction. Two selections - energy (for all) and mode(just for wfn)\n",
     "def single(Energy,Mode):\n",
     "    global fsys\n",
     "    fsys=sys.finalized()\n",
     "    ldos_and_current(Energy)\n",
     "    lead_wfn(en=Energy,mode=Mode-1)    \n",
     "    \n",
-    "Single_en_at = interactive(single,Energy=widgets.FloatText(value=0.5,description=\"Energy (t)\"),Mode=widgets.IntSlider(min=1, max=10, value=0))\n",
+    "Single_en_at = interactive(single,Energy=widgets.FloatText(description_tooltip=\"Enter the energy at wich you want to calculate the properties\",value=0.5,description=\"Energy (t)\"),\n",
+    "                           Mode=widgets.IntSlider(description_tooltip=\"Select between wavefunctions at the selected energy\",min=1, max=10, value=0))\n",
     "ldos_current=1\n",
     "    "
    ]
@@ -970,7 +973,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To calculate local DOS, current map and wavefunction in the lead, select the desired energy value. In cases where multiple bands are present at the selected energy, wavefunctions coresponding to different bands can be calculated by selecting mode. Modes range from 0 to N-1, with N being the bumber of bands at the selected energy. Current map displays the cumulative current from all channels involved at the selected energy.  "
+    "To calculate local DOS, current map and wavefunction in the lead, select the desired energy value. In cases where multiple bands are present at the selected energy, wavefunctions coresponding to different bands can be calculated by selecting mode. Modes range from 1 to N, with N being the bumber of bands at the selected energy. Current map displays the cumulative current from all channels involved at the selected energy.  "
    ]
   },
   {
