Uploaded new version of .iypnb
Added progress bar for the calculation

--- a/Web_app_voila.ipynb
+++ b/Web_app_voila.ipynb
@@ -16,18 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda\\lib\\site-packages\\kwant\\solvers\\default.py:18: RuntimeWarning: MUMPS is not available, SciPy built-in solver will be used as a fallback. Performance can be very poor in this case.\n",
-      "  \"Performance can be very poor in this case.\", RuntimeWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import kwant\n",
     "from math import *\n",
@@ -395,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,6 +484,16 @@
     "    energies=np.linspace((emin+0.00001)*t, (emax+0.00001)*t, num=300) #specify energy grid\n",
     "    perfsys=perfect_system(t) #obtain the geometry of the pristine lead system\n",
     "    for i,energy in enumerate(energies):\n",
+    "        if i==60:\n",
+    "            progress.value=1\n",
+    "        if i==120:\n",
+    "            progress.value=2\n",
+    "        if i==180:\n",
+    "            progress.value=3\n",
+    "        if i==180:\n",
+    "            progress.value=4\n",
+    "        if i==300:\n",
+    "            progress.value=5  \n",
     "        smatrix = kwant.smatrix(fsys, energy,check_hermiticity=False) #calculates the S matrix of the system in interest\n",
     "        trans.append(smatrix.transmission(1,0)) #calcualtes the transmission coefficient\n",
     "        if i%2==0:\n",
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,6 +521,16 @@
     "    energies=np.linspace(emin*t, emax*t, num=300) #eneryg range\n",
     "    \n",
     "    for i,J in enumerate(energies):\n",
+    "        if i==60:\n",
+    "            progress.value=6\n",
+    "        if i==120:\n",
+    "            progress.value=7\n",
+    "        if i==180:\n",
+    "            progress.value=8\n",
+    "        if i==180:\n",
+    "            progress.value=9\n",
+    "        if i==300:\n",
+    "            progress.value=10\n",
     "        dos.append(np.sum(kwant.ldos(fsys,J))) #sum over all atom ldos\n",
     "        if i%2==0:\n",
     "            dos2.append(np.sum(kwant.ldos(perfsys,J)))\n",
@@ -532,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,14 +691,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Plotting function to get both Conductance and DOS\n",
     "def cond_and_dos(Emin,Emax):\n",
     "    energies, energies2, trans, trans2=plot_conductance(Emin,Emax)\n",
-    "    dos, dos2 = get_DOS(Emin,Emax)      \n",
+    "    dos, dos2 = get_DOS(Emin,Emax)\n",
+    "    progress.value=11\n",
     "    fig, (ax, ax2) = plt.subplots(1, 2, figsize=(20,10)) \n",
     "    ax.plot(energies, trans, label=\"Junction\")\n",
     "    ax.plot(energies2, trans2, label=\"GNR\")\n",
@@ -709,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
@@ -854,7 +866,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2350a96dec3b4285a94efcf4df4f976e",
+       "model_id": "6eecc02731b74d869baa468310d906c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -868,7 +880,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "996398a7f10b4dd298e1c764f5e0af46",
+       "model_id": "30a10e57d55c4060ace029d2d94a3061",
        "version_major": 2,
        "version_minor": 0
       },
@@ -882,7 +894,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6dab1dedac4d4800bff63053a80d62d0",
+       "model_id": "df22df40bade4bd8bb0f0cd76fcdc6d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -937,17 +949,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d6de0b4e8d274e1085f126aec1505dc9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=-3.0, description='Min Energy (t)', description_tooltip='Select the lo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "45bafe60175d47eca18120c5102f886e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntProgress(value=0, bar_style='info', description='Progress:', layout=Layout(visibility='hidden'), max=10)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#Again a manual interact widget just like the Remove atoms. Finalizes the system and then plots conductance and dos. \n",
+    "progress=widgets.IntProgress(value=0,min=0,max=12,step=1,description='Progress:',bar_style='info',orientation='horizontal')\n",
+    "progress.layout.visibility='hidden'\n",
     "interact_calc=interact.options(manual=True, manual_name=\"Calculate\")\n",
     "@interact_calc(Emin=widgets.FloatSlider(description_tooltip=\"Select the lowest energy of the desired range\",min=-3, max=3, step=0.1, value=-3, description=\"Min Energy (t)\",style=style),Emax=widgets.FloatSlider(min=-3, max=3, step=0.1, value=3,description_tooltip=\"Select the highest energy of the desired range\",description=\"Max Energy (t)\",style=style))\n",
     "def calculate_cond(Emin,Emax):\n",
     "    global fsys\n",
+    "    progress.layout.visibility=\"initial\" \n",
     "    fsys=sys.finalized()\n",
-    "    cond_and_dos(Emin,Emax)"
+    "    cond_and_dos(Emin,Emax)\n",
+    "    progress.layout.visibility=\"hidden\"\n",
+    "display(progress)"
    ]
   },
   {
