--- a/Web_app_title_page.ipynb
+++ b/Web_app_title_page.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Start the application](web_app_voila.ipynb)"
+    "[Start the application](Web_app_voila.ipynb)"
    ]
   },
   {
